syntax = "proto3";
import "google/api/annotations.proto";

option csharp_namespace = "Catalog.Application";

package brand;

service BrandService {
	rpc GetBrand(GetBrandRequest) returns (BrandDto) {
		option (google.api.http) = {
            get: "/v1/brand/{id}"
        };
	};

	rpc AddBrand(BrandDto) returns (BrandDto) {
		option (google.api.http) = {
            post: "/v1/brand"
        };
	};
}

message GetBrandRequest {
	string id = 1;
}

message BrandDto {
	string id = 1;
	string name = 2;
	string image = 3;
	int32 status = 4;
	string ream_id = 5;
}